--- a/serverless.yml
+++ b/serverless.yml
@@ -79,6 +79,8 @@ resources:
             AttributeType: S
           - AttributeName: type
             AttributeType: S
+          - AttributeName: topic
+            AttributeType: S
         KeySchema:
           - AttributeName: id
             KeyType: HASH
@@ -87,3 +89,22 @@ resources:
         BillingMode: PAY_PER_REQUEST
         StreamSpecification:
           StreamViewType: NEW_AND_OLD_IMAGES
+
+        GlobalSecondaryIndexes:
+          - IndexName: topicGsi
+            KeySchema:
+              - AttributeName: topic
+                KeyType: HASH
+              - AttributeName: type
+                KeyType: RANGE
+            Projection:
+              ProjectionType: ALL
+
+          - IndexName: typeGsi
+            KeySchema:
+              - AttributeName: type
+                KeyType: HASH
+              - AttributeName: id
+                KeyType: RANGE
+            Projection:
+              ProjectionType: ALL
